--- a/setup.cfg
+++ b/setup.cfg
@@ -3,4 +3,4 @@ test = pytest
 
 [tool:pytest]
 addopts = --verbose -p no:warnings
-python_files = tests/storage/test_*.py
+python_files = tests/**/test_*.py
